Adaptation Workflow to CI GC